--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row row-no-gutters">
               <div class="col-xs-12">
                 <div class="colonna">
-
+                  <h2>START BOOTSTRAP</h2>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
       <section class="whitesection">
         <div class="container-fluid">
           <div class="contenitore">
-            <h1>PORTFOLIO</h1>
+            <h2>PORTFOLIO</h2>
             <div class="row row-no-gutters">
               <div class="col-xs-12 col-md-6 col-lg-4">
                 <div class="colonna">
@@ -92,6 +92,87 @@
           </div>
         </div>
       </section>
+
+      <!-- Sezione About -->
+      <section class="greensection">
+        <div class="container-fluid">
+          <div class="contenitore">
+            <h2>ABOUT</h2>
+            <div class="row row-no-gutters">
+              <div class="col-xs-12 col-md-6">
+                <div class="colonna">
+
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-md-6">
+                <div class="colonna">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Sezione Contattami -->
+      <section class="whitesection">
+        <div class="container-fluid">
+          <div class="contenitore">
+            <h2>CONTACT ME</h2>
+            <div class="row row-no-gutters">
+              <div class="col-xs-12">
+                <div class="colonna">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <!-- Sezione footer: location, social e chi siamo -->
+      <section>
+        <div class="container-fluid">
+          <div class="contenitore">
+            <div class="row row-no-gutters">
+              <div class="col-xs-12 col-md-4">
+                <div class="colonna">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-4">
+                <div class="colonna">
+
+                </div>
+              </div>
+              <div class="col-xs-12 col-md-4">
+                <div class="colonna">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Sezione footer: copyright -->
+      <section>
+        <div class="container-fluid">
+          <div class="contenitore">
+            <div class="row row-no-gutters">
+              <div class="col-xs-12">
+                <div class="colonna">
+                  <h2>COPYRIGHT</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </footer>
   </body>
 </html>
