Implementazione jumbo, portfolio e about

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
-    
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/2e0cc00556.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -43,24 +46,30 @@
                 <li><a href="#">CONTACT</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
-          </div>
-
+          </div><!-- /.contenitore -->
         </div><!-- /.container-fluid -->
       </nav>
     </header>
 
     <main>
       <!-- Sezione Jumbo -->
-      <section class="greensection">
+      <section class="greensection white-text">
         <div class="container-fluid">
           <div class="contenitore">
-            <div class="row row-no-gutters">
-              <div class="col-xs-12">
-                <div class="colonna">
-                  <h2>START BOOTSTRAP</h2>
-                </div>
-              </div>
+            <img src="img/avatar.svg" alt="Avatar sorridente">
+            <h2 class="jumbo_title white">START BOOTSTRAP</h2>
+
+            <!-- Separatore stella -->
+            <div class="separatore">
+              <div class="line-hor"></div>
+              <i class="fas fa-star fa-lg star-icon"></i>
+              <div class="line-hor"></div>
             </div>
+
+            <p id="jumbo-text">
+              GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+            </p>
+
           </div>
         </div>
       </section>
@@ -70,41 +79,37 @@
         <div class="container-fluid">
           <div class="contenitore">
             <h2>PORTFOLIO</h2>
-            <div class="row row-no-gutters">
-              <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
 
-                </div>
+            <!-- Separatore stella -->
+            <div class="separatore">
+              <div class="line-hor"></div>
+              <i class="fas fa-star fa-lg star-icon"></i>
+              <div class="line-hor"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-12 col-md-6 col-lg-4">
+                <img src="img/cabin.png" alt="Casa di legno">
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
-
-                </div>
+                <img src="img/cake.png" alt="Torta">
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
-
-                </div>
+                <img src="img/circus.png" alt="Circo">
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
-
-                </div>
+                <img src="img/game.png" alt="Gamepad">
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
-
-                </div>
+                <img src="img/safe.png" alt="Cassaforte">
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <div class="colonna">
-
-                </div>
+                <img src="img/submarine.png" alt="Sottomarino">
               </div>
             </div>
           </div>
@@ -112,21 +117,29 @@
       </section>
 
       <!-- Sezione About -->
-      <section class="greensection">
+      <section class="greensection white-text">
         <div class="container-fluid">
           <div class="contenitore">
             <h2>ABOUT</h2>
-            <div class="row row-no-gutters">
-              <div class="col-xs-12 col-md-6">
-                <div class="colonna">
 
-                </div>
+            <!-- Separatore stella -->
+            <div class="separatore">
+              <div class="line-hor"></div>
+              <i class="fas fa-star fa-lg star-icon"></i>
+              <div class="line-hor"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <p class="testosx">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </p>
               </div>
 
               <div class="col-xs-12 col-md-6">
-                <div class="colonna">
-
-                </div>
+                <p class="testosx">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
               </div>
             </div>
           </div>
