--- a/index.html
+++ b/index.html
@@ -89,27 +89,57 @@
 
             <div class="row">
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/cabin.png" alt="Casa di legno">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/cabin.png" alt="Casa di legno">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/cake.png" alt="Torta">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/cake.png" alt="Torta">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/circus.png" alt="Circo">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/circus.png" alt="Circo">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/game.png" alt="Gamepad">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/game.png" alt="Gamepad">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/safe.png" alt="Cassaforte">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/safe.png" alt="Cassaforte">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
 
               <div class="col-xs-12 col-md-6 col-lg-4">
-                <img src="img/submarine.png" alt="Sottomarino">
+                <div class="card white-text">
+                  <a href="#">
+                    <img src="img/submarine.png" alt="Sottomarino">
+                    <i class="fas fa-plus"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
