--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="row">
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/cabin.png" alt="Casa di legno">
@@ -97,7 +97,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/cake.png" alt="Torta">
@@ -106,7 +106,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/circus.png" alt="Circo">
@@ -115,7 +115,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/game.png" alt="Gamepad">
@@ -124,7 +124,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/safe.png" alt="Cassaforte">
@@ -133,7 +133,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-md-6 col-lg-4">
+              <div class="col-xs-12 col-sm-6 col-lg-4">
                 <div class="card white-text">
                   <a href="#">
                     <img src="img/submarine.png" alt="Sottomarino">
@@ -160,17 +160,21 @@
             </div>
 
             <div class="row">
-              <div class="col-xs-12 col-md-6">
+              <div class="col-xs-10 col-xs-offset-1 col-md-5 ">
                 <p class="testosx">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
               </div>
 
-              <div class="col-xs-12 col-md-6">
+              <div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
                 <p class="testosx">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 </p>
               </div>
+              <a href="#" class="btn btn-primary btn-lg active" role="button">
+                <i class="fas fa-download"></i>
+                Download
+              </a>
             </div>
           </div>
         </div>
@@ -181,10 +185,36 @@
         <div class="container-fluid">
           <div class="contenitore">
             <h2>CONTACT ME</h2>
-            <div class="row row-no-gutters">
-              <div class="col-xs-12">
-                <div class="colonna">
 
+            <!-- Separatore stella -->
+            <div class="separatore">
+              <div class="line-hor"></div>
+              <i class="fas fa-star fa-lg star-icon"></i>
+              <div class="line-hor"></div>
+            </div>
+
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="col-xs-10 col-xs-offset-1">
+                  <form id="contatti" class="testosx">
+                    <div class="form-group">
+                       <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
+                    </div>
+
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Adress">
+                    </div>
+
+                    <div class="form-group">
+                       <input type="text" class="form-control" id="exampleInputName2" placeholder="Phone Number">
+                    </div>
+                    
+                    <div class="form-group">
+                      <textarea class="form-control" rows="5" placeholder="Message"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-default">Send</button>
+                  </form>
                 </div>
               </div>
             </div>
