Esercizio completo: footer, header fixed, link con effetti transizioni

--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
                 <div class="col-xs-10 col-xs-offset-1">
                   <form id="contatti" class="testosx">
                     <div class="form-group">
-                       <input type="text" class="form-control" id="exampleInputName2" placeholder="Name">
+                       <input type="text" class="form-control"  placeholder="Name">
                     </div>
 
                     <div class="form-group">
-                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Adress">
+                      <input type="email" class="form-control" placeholder="Email Adress">
                     </div>
 
                     <div class="form-group">
-                       <input type="text" class="form-control" id="exampleInputName2" placeholder="Phone Number">
+                       <input type="text" class="form-control"  placeholder="Phone Number">
                     </div>
-                    
+
                     <div class="form-group">
                       <textarea class="form-control" rows="5" placeholder="Message"></textarea>
                     </div>
@@ -227,22 +227,35 @@
       <!-- Sezione footer: location, social e chi siamo -->
       <section>
         <div class="container-fluid">
-          <div class="contenitore">
-            <div class="row row-no-gutters">
+          <div class="contenitore white-text">
+            <div class="row">
               <div class="col-xs-12 col-md-4">
-                <div class="colonna">
-
-                </div>
+                <h3>LOCATION</h3>
+                <p>2215 Jhon Daniel Drive Clark, MO 52423</p>
               </div>
-              <div class="col-xs-12 col-md-4">
-                <div class="colonna">
 
-                </div>
+              <div class="col-xs-12 col-md-4">
+                <h3>AROUND THE WEB</h3>
+                <a class="social" href="#">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a class="social" href="#">
+                  <i class="fab fa-google-plus-g"></i>
+                </a>
+                <a class="social" href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a class="social" href="#">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
               </div>
-              <div class="col-xs-12 col-md-4">
-                <div class="colonna">
 
-                </div>
+              <div class="col-xs-12 col-md-4">
+                <h3>AROUND FRELANCER</h3>
+                <p>
+                  Freelance is a free to use, open source Bootstrap theme created by
+                  <a id="linketto" href="#">Start Bootstrap</a>.
+                </p>
               </div>
             </div>
           </div>
@@ -252,12 +265,12 @@
       <!-- Sezione footer: copyright -->
       <section>
         <div class="container-fluid">
-          <div class="contenitore">
-            <div class="row row-no-gutters">
+          <div class="contenitore white-text">
+            <div class="row ">
               <div class="col-xs-12">
-                <div class="colonna">
-                  <h2>COPYRIGHT</h2>
-                </div>
+                <p>
+                  Copyright <i class="far fa-copyright"></i> Your Website 2021
+                </p>
               </div>
             </div>
           </div>
